--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "movie-browser",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kaniewskisoftware.github.io/movie-browser/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
